# 4bar_search

./: .gitignore  README.md  draw.py  pyproject.toml
src/: pivots.py  utils.py
test/: utils_test.py
