[tool.poetry]
name = "storage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
ipython = "^8.7.0"
pygame = "^2.1.2"
pytest = "^7.2.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
